# csv-data-cleaning

./: .gitignore  LICENSE  README.md  clean_data.py  cleaned_output.csv  issues_report.csv  pyproject.toml
.github/workflows/: ci.yml
sample_data/: messy_sample.csv  sample_directory.html
src/data_cleaner/: __init__.py  cli.py  core.py
src/directory_scraper/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
